--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,67 @@ body{
     height: 420px;
     background: #1c1c1c;
     border-radius: 8px;
+    overflow: hidden;
+}
+
+.box::before{
+    content: "";
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 380px;
+    height: 420px;
+    background: linear-gradient(0deg, transparent,
+    transparent, #45f3ff,#45f3ff,#45f3ff);
+    z-index: 1;
+    transform-origin: bottom-right;
+    animation: animate 6s linear infinite;
+}
+
+.box::after{
+    content: "";
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 380px;
+    height: 420px;
+    background: linear-gradient(0deg, transparent,
+    transparent, #45f3ff,#45f3ff,#45f3ff);
+    z-index: 1;
+    transform-origin: bottom-right;
+    animation: animate 6s linear infinite;
+    animation-delay: -3s;
+}
+
+.borderLine{
+    position: absolute;
+    top: 0;
+    inset: 0;
+}
+
+.borderLine::before{
+    content: "";
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 380px;
+    height: 420px;
+    background: linear-gradient(0deg, transparent,
+    transparent, #ff2770,#ff2770,#ff2770);
+    z-index: 1;
+    transform-origin: bottom-right;
+    animation: animate 6s linear infinite;
+    animation-delay: -1.5s;
+}
+
+@keyframes animate{
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+        background-color: #ff2770;
+    }
 }
 
 .box form{
@@ -118,4 +179,16 @@ body{
     outline: none;
     padding: 9px 25px;
     background: #fff;
+    cursor: pointer;
+    font-size: 0.9em;
+    border-radius: 4px;
+    font-weight: 600;
+    width: 100px;
+    margin-top: 10px;
+
+}
+
+.box form .inputBox input[type="submit"]:active{
+    opacity: 0.8;
+
 }
